edited html file

--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, vitae?</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, praesentium?</p>
+    <ul>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+    </ul>
 </body>
 </html>
